# citrine-gb

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  FEATURES.md  Makefile  README.md
app/: Cargo.toml  build.rs  index.html
app/assets/: icon-512x512.icns  icon.aseprite  manifest.json
app/homebrew/: index.toml  porklike.gb  shock_lobster.gb
app/src/: app.rs  audio.rs  emulator.rs  homebrew.rs  lib.rs  main.rs  utils.rs
app/src/app/: events.rs  file_picker.rs  panels.rs  settings.rs  tabs.rs  ui_state.rs  widgets.rs  windows.rs
app/src/app/panels/: debug.rs  registers.rs
app/src/app/tabs/: apu.rs  apu_waves.rs  audio_debug.rs  debug_actions.rs  disassembly.rs  e2e.rs  game_boy.rs  homebrew.rs  info.rs  performance.rs  registers.rs  rom_info.rs  settings.rs  time_control.rs
app/src/app/ui_state/: settings.rs  ui_theme.rs
app/src/app/widgets/: apu.rs  apu_waves.rs  audio_debug.rs  debug_actions.rs  disassembly.rs  enum_select.rs  generic_select.rs  homebrew.rs  info.rs  panel_menu.rs  performance.rs  registers.rs  reset_slider.rs  rom_info.rs  settings.rs  theme_selector.rs  time_control.rs
app/src/app/widgets/info/: changelog.rs  features.rs  welcome.rs
app/src/app/widgets/registers/: cpu.rs  ir.rs  ppu.rs  timer.rs
app/src/app/widgets/settings/: bar.rs  content.rs
app/src/app/windows/: debug_actions.rs  e2e_test.rs  homebrew.rs  rom_info.rs  settings.rs  time_control.rs
app/src/utils/: avg_timer.rs
lib/: Cargo.toml  README.md
lib/src/: debug.rs  disassembler.rs  disassembly.rs  error.rs  gb.rs  instructions.rs  lib.rs  persistence.rs  rom.rs  tests.rs  utils.rs
lib/src/debug/: e2e.rs
lib/src/gb/: apu.rs  boot_rom.rs  bus.rs  cartridge.rs  cpu.rs  dma.rs  ic.rs  joypad.rs  memory.rs  ppu.rs  timer.rs
lib/src/gb/apu/: channels.rs  components.rs  global.rs  master_volume_vin.rs  registers.rs  sound_panning.rs
lib/src/gb/apu/channels/: channel_1.rs  channel_2.rs  channel_3.rs  channel_4.rs
lib/src/gb/apu/channels/channel_1/: control.rs  sweep.rs  timer.rs  volume.rs
lib/src/gb/apu/components/: frequency_sweep.rs  length_counter.rs  square_wave.rs  volume_envelope.rs
lib/src/gb/apu/registers/: audio_master_control.rs  ch123_control.rs  ch124_volume.rs  ch12_control.rs  ch12_timer.rs  ch12_volume.rs  ch1_sweep.rs  ch4_frequency.rs  master_volume_vin.rs  sound_panning.rs
lib/src/gb/cartridge/: mbc.rs
lib/src/gb/cartridge/mbc/: mbc1.rs  mbc2.rs  mbc3.rs
lib/src/gb/ppu/: color.rs  dot.rs  fetcher.rs  fifo.rs  framebuffer.rs  lcdc.rs  mode.rs  rendering.rs  scanner.rs  sprite.rs  stat.rs  tile.rs  types.rs
lib/src/gb/ppu/types/: color.rs  framebuffer.rs  lcdc.rs  mode.rs  sprite.rs  stat.rs  theme.rs  tile.rs
lib/src/persistence/: full_dump.rs  sdump.rs  sram_dump.rs
lib/src/rom/: header.rs
lib/src/tests/: cpu.rs  e2e.rs
lib/src/tests/cpu/: adtennant.rs
lib/src/utils/: ema.rs  formatting.rs
server/: Cargo.toml
server/docker/: Dockerfile  docker-compose.yml
server/src/: main.rs
tests/e2e/blargg_cpu_instrs/: meta.json
tests/e2e/blargg_instr_timing/: meta.json
tests/e2e/blargg_mem_timing/: meta.json
tests/e2e/cpu_instrs/: meta.json
tests/e2e/daa/: meta.json
tests/e2e/dmg_acid2/: meta.json
tests/e2e/instr_timing/: meta.json
tests/e2e/intr_1_2_timing-GS/: meta.json
tests/e2e/mbc1_bits_bank1/: meta.json
tests/e2e/mbc1_bits_bank2/: meta.json
tests/e2e/mbc1_bits_mode/: meta.json
tests/e2e/mbc1_bits_ramg/: meta.json
tests/e2e/mbc1_ram_256kb/: meta.json
tests/e2e/mbc1_ram_64kb/: meta.json
tests/e2e/mbc1_rom_16Mb/: meta.json
tests/e2e/mbc1_rom_1Mb/: meta.json
tests/e2e/mbc1_rom_2Mb/: meta.json
tests/e2e/mbc1_rom_4Mb/: meta.json
tests/e2e/mbc1_rom_512kb/: meta.json
tests/e2e/mbc1_rom_8Mb/: meta.json
tests/e2e/mbc2_bits_ramg/: meta.json
tests/e2e/mbc2_bits_romb/: meta.json
tests/e2e/mbc2_bits_unused/: meta.json
tests/e2e/mbc2_ram/: meta.json
tests/e2e/mbc2_rom_1Mb/: meta.json
tests/e2e/mbc2_rom_2Mb/: meta.json
tests/e2e/mbc2_rom_512kb/: meta.json
tests/e2e/mem_timing/: meta.json
tests/e2e/ppu_intr_1_2_timing-GS/: meta.json
tests/e2e/ppu_intr_2_mode3_timing/: meta.json
tests/e2e/ppu_stat_irq_blocking/: meta.json
tests/e2e/timer_div_write/: meta.json
tests/e2e/timer_rapid_toggle/: meta.json
tests/e2e/timer_tim00/: meta.json
tests/e2e/timer_tim00_div_trigger/: meta.json
tests/e2e/timer_tim01/: meta.json
tests/e2e/timer_tim01_div_trigger/: meta.json
tests/e2e/timer_tim10/: meta.json
tests/e2e/timer_tim10_div_trigger/: meta.json
tests/e2e/timer_tim11/: meta.json
tests/e2e/timer_tim11_div_trigger/: meta.json
tests/e2e/timer_tima_reload/: meta.json
tests/e2e/timer_tima_write_reloading/: meta.json
tests/e2e/timer_tma_write_reloading/: meta.json
