[package]
name = "citrine-gb-app"
version = "0.1.0"
edition = "2024"

[package.metadata.docs.rs]
all-features = true
targets = ["aarch64-apple-darwin", "wasm32-unknown-unknown"]

[dependencies]
citrine-gb = { workspace = true, features = ["debug", "serde"] }
bitflags = { version = "2.11.0", features = ["serde"] }
eframe = { version = "0.33.0", default-features = false, features = ["persistence"] }
egui = "0.33.0"
egui-notify = "0.21.0"
egui-phosphor = { version = "0.11.0", features = ["regular"] }
log = "0.4.29"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
strum = "0.27.2"
strum_macros = "0.27.2"
web-time = "1.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
eframe = { version = "0.33.0", default-features = false, features = ["persistence", "wayland", "wgpu", "x11"] }
gilrs = "0.11.1"
image = "0.25.9"
wgpu = { version = "27.0.1", features = ["metal", "vulkan", "dx12"] }

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
ar = "x86_64-w64-mingw32-gcc-ar"

[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = { version = "0.33.0", default-features = false, features = ["glow", "persistence"] }
poll-promise = { version = "0.3.0", features = ["web"] }
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"

[build-dependencies]
winresource = "0.1"

[package.metadata.bundle]
name = "Citrine"
identifier = "io.github.zitronenjoghurt.citrine"
short_description = "A cycle-accurate Game Boy and Game Boy Color emulator."
icon = ["assets/icon-512x512.icns"]

[package.metadata.winresource]