[package]
name = "citrine-gb-app"
version = "0.4.0"
edition = "2024"

[package.metadata.docs.rs]
all-features = true
targets = ["aarch64-apple-darwin", "wasm32-unknown-unknown"]

[dependencies]
citrine-gb = { workspace = true, features = ["debug", "serde", "base64", "strum"] }
anyhow = "1.0.102"
brotli = "8.0.2"
cpal = "0.17.3"
eframe = { version = "0.33.0", default-features = false, features = ["persistence"] }
egui = "0.33.0"
egui-aesthetix = "0.2.4"
egui_commonmark = "0.22.0"
egui_dock = { version = "0.18.0", features = ["serde"] }
egui-modal = "0.6.0"
egui-notify = "0.21.0"
egui-phosphor = { version = "0.11.0", features = ["regular"] }
gilrs = "0.11.1"
log = "0.4.29"
rfd = "0.17.2"
ringbuf = "0.4.8"
serde = { version = "1.0.228", features = ["derive"] }
strum = "0.28.0"
strum_macros = "0.28.0"
web-time = "1.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
eframe = { version = "0.33.0", default-features = false, features = ["persistence", "wayland", "wgpu", "x11"] }
image = "0.25.9"
wgpu = { version = "27.0.1", features = ["metal", "vulkan", "dx12"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
cpal = { version = "0.17.3", features = ["wasm-bindgen"] }
eframe = { version = "0.33.0", default-features = false, features = ["glow", "persistence"] }
poll-promise = { version = "0.3.0", features = ["web"] }
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"

[build-dependencies]
brotli = "8.0.2"
quote = "1.0.44"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.3+spec-1.1.0"
winresource = "0.1"

[package.metadata.bundle]
name = "Citrine"
identifier = "io.github.zitronenjoghurt.citrine"
short_description = "A cycle-accurate Game Boy and Game Boy Color emulator."
icon = ["assets/icon-512x512.icns"]

[package.metadata.winresource]