[package]
name = "citrine-gb"
version = "0.1.0"
edition = "2024"

[features]
default = []
debug = ["crc32fast", "png", "serde", "serde_json", "sha1", "sha2"]

[dependencies]
bitflags = "2.11.0"
crc32fast = { version = "1.5.0", optional = true }
png = { version = "0.18.1", optional = true }
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.149", optional = true }
sha1 = { version = "0.11.0-rc.5", optional = true }
sha2 = { version = "0.11.0-rc.5", optional = true }

[dev-dependencies]
citrine-gb = { path = ".", features = ["debug"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"