[package]
name = "citrine-gb"
description = "A cycle-accurate game boy emulator. (Work in progress)"
homepage = "https://gb.lemon.industries"
repository = "https://github.com/Zitronenjoghurt/citrine-gb"
license = "MIT"
version = "0.5.0"
edition = "2024"
exclude = [".DS_Store"]

[features]
default = []
debug = ["crc32fast", "png", "serde", "serde_json", "sha1", "sha2"]
strum = ["dep:strum", "strum_macros"]

[dependencies]
bitflags = "2.11.0"
base64 = { version = "0.22.1", optional = true }
blip_buf = "0.1.6"
crc32fast = { version = "1.5.0", optional = true }
png = { version = "0.18.1", optional = true }
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.149", optional = true }
sha1 = { version = "0.11.0-rc.5", optional = true }
sha2 = { version = "0.11.0-rc.5", optional = true }
strum = { version = "0.28.0", optional = true }
strum_macros = { version = "0.28.0", optional = true }

[dev-dependencies]
citrine-gb = { path = ".", features = ["debug"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"